--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="card">
+      <form action="post">
       <h1>Calculator</h1>
       <input type="text" class="result" maxlength="10" placeholder="0" />
       <div>
@@ -38,6 +39,7 @@
         <input type="button" class="btn" value="DEL" />
         <input type="button" class="btn btn_equl" value="=" />
       </div>
+      </form>
     </div>
   </body>
 </html>
